base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-portfolio
  labels:
    app.kubernetes.io/part-of: devops-portfolio
