base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-api
  namespace: devops-portfolio
  labels:
    app: portfolio-api
spec:
  selector:
    app: portfolio-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
